# score-addon-sc

./: .gitmodules  CMakeLists.txt  README.md  addon.json  init.sh  release.sh  score_addon_sc.cpp  score_addon_sc.hpp  score_sc_device.cpp  score_sc_device.hpp  score_sc_process.cpp  score_sc_process.hpp
.github/workflows/: jit.yml
Device/: Device.cpp  ProtocolSettingsWidget.hpp  SCProcess.hpp  SCProtocol.cpp  SCProtocol.hpp  SpecificSettings.hpp  SpecificSettingsSerialization.cpp
MyDevice/: Device.cpp  Device.hpp  ProtocolFactory.cpp  ProtocolFactory.hpp
Process/: Distortion.hpp
SC/: Device.cpp  Device.hpp  ProtocolFactory.cpp  ProtocolFactory.hpp  ProtocolSettingsWidget.cpp  ProtocolSettingsWidget.hpp  SCProcess.cpp  sc_protocol.cpp  sc_protocol.hpp
sc/: CMakeLists.txt  Device.cpp  Device.hpp  ProtocolFactory.cpp  ProtocolFactory.hpp  ProtocolSettingsWidget.cpp  ProtocolSettingsWidget.hpp  SCProcess.cpp  SCProcess.hpp  SpecificSettings.hpp  SpecificSettingsSerialization.cpp  sc_protocol.cpp  sc_protocol.hpp
